--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-<!--
-    <meta name="description" content="Guiding values, an operating model, and global policies to support a federated governance group by example">
+    <meta property="description" content="Data contracts bring data producers and data consumers together." />
     <meta property="og:title" content="Data Contract Specification">
-    <meta property="og:description" content="Guiding values, an operating model, and global policies to support a federated governance group by example">
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://www.datamesh-governance.com/images/governance_card.png.webp" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Data Contract Specification" />
-    <meta name="twitter:description" content="Pragmatic examples of global policies" />
-    <meta name="twitter:image" content="https://www.datamesh-governance.com/images/governance_card.png.webp" />
-    <meta name="twitter:site" content="@innoq" />
-    <meta name="twitter:creator" content="@jochen_christ" />
-    -->
+    <meta property="og:image" content="images/datacontract.png" />
+
+    <!--
+        <meta name="description" content="Guiding values, an operating model, and global policies to support a federated governance group by example">
+        <meta property="og:description" content="Guiding values, an operating model, and global policies to support a federated governance group by example">
+        <meta property="og:type" content="website" />
+        <meta property="og:image" content="https://www.datamesh-governance.com/images/governance_card.png.webp" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Data Contract Specification" />
+        <meta name="twitter:description" content="Pragmatic examples of global policies" />
+        <meta name="twitter:image" content="https://www.datamesh-governance.com/images/governance_card.png.webp" />
+        <meta name="twitter:site" content="@innoq" />
+        <meta name="twitter:creator" content="@jochen_christ" />
+        -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
