--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <meta property="og:image" content="https://datacontract.com/images/datacontract.png" />
+    <meta property="og:image" content="https://datacontract.com/images/datacontract-preview.png" />
 
     <!--
         <meta name="description" content="Guiding values, an operating model, and global policies to support a federated governance group by example">
