--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <meta property="og:image" content="https://datacontract.com/images/datacontract-preview.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="https://datacontract.com/images/datacontract-preview.png" />
 
     <!--
         <meta name="description" content="Guiding values, an operating model, and global policies to support a federated governance group by example">
