--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,14 +9,16 @@
     <meta name="twitter:image" content="https://datacontract.com/images/datacontract-preview.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-{% seo %}
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
+
+    {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     <style>
       .footer {
         text-align: center;
         margin-bottom: 1rem;
       }
-      
+
       .footer-logo {
         width: 150px;
       }
